fixed some styling
fixed some styling

--- a/src/app/wf-label/wf-label.component.html
+++ b/src/app/wf-label/wf-label.component.html
@@ -1,4 +1,5 @@
+<span style="color:red;">Label Component: template text should be red</span>
+<br/>
 <span [innerHTML]="componentData.labelText"></span>
-<p style="color:red;">Label Component: template text should be red</p>
+<br/>
 <br />
-
