--- a/src/app/wf-link/wf-link.component.html
+++ b/src/app/wf-link/wf-link.component.html
@@ -1,4 +1,5 @@
-<a href="{{componentData.urlAddress}}" target="_blank"><span [innerHTML]="componentData.linkText"></span></a>
-<p style="color:red;">Link Component: template text should be red</p>
+<span style="color:red;">Link Component: template text should be red</span>
 <br />
-
+<a href="{{componentData.urlAddress}}" target="_blank"><span [innerHTML]="componentData.linkText"></span></a>
+<br />
+<br />
