added kendo datepicker
added kendo datepicker

--- a/src/app/wf-numeric-textbox/wf-numeric-textbox.component.html
+++ b/src/app/wf-numeric-textbox/wf-numeric-textbox.component.html
@@ -1,1 +1,5 @@
+<span style="color:red;">Numeric Component: template text should be red</span>
+<br />
 <input type="number" [(ngModel)]="componentData.value" (ngModelChange)="ngModelChanged($event)" class="form-control width-150" />
+<br />
+<br />
